--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,8 +12,10 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jsdom": "^19.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.4",
+    "node-fetch": "^3.2.0",
     "nodemon": "^2.0.15"
   }
 }
